css animation small fix

--- a/GnuOne/ClientApp/src/components/MenuWheel/profileWheel.scss
+++ b/GnuOne/ClientApp/src/components/MenuWheel/profileWheel.scss
@@ -16,7 +16,7 @@
     height: 3px;
     background-color: var(--lines-menu-wheel);
     z-index: -1;
-    animation: lines-animation 1s ease-in;
+/*    animation: lines-animation 1s ease-in;*/
 }
 .line-after {
     position: absolute;
@@ -26,7 +26,7 @@
     z-index: -1;
 }
 
-@keyframes lines-animation{
+/*@keyframes lines-animation{
     0% {
         opacity: 0%;
     }
@@ -42,7 +42,7 @@
     100% {
         opacity: 100%;
     }
-}
+}*/
 
 //=================================================================
 //top circle controler
@@ -299,20 +299,17 @@
 }
 
 @keyframes menu-animation {
-    from {
-        opacity: 0%;
-    }
-    to {
-        opacity: 100%;
+    100% {
+        
         transform: translate(0em);
     }
 }
 
-.friends-wheel {
+.friends-wheel .notChosen {
     animation: menu-animation-friend 1s ease-in forwards;
 }
 
-@keyframes menu-animation-friend {
+/*@keyframes menu-animation-friend {
     from{
         opacity:0%;
     }
@@ -320,7 +317,7 @@
         opacity:100%;
     }
 }
-
+*/
 
 
 //=================================================================
